showing done dialog after product has been posted

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="product_price">Product Price</string>
     <string name="product_tax">Product Tax</string>
     <string name="product_type">Product Type</string>
+    <string name="product_has_been_posted">Product has been posted!</string>
+    <string name="ok">OK</string>
 </resources>
