Successfully monitoring the internet in add product fragment , we can post the products iff we have internet turned on

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="product_type">Product Type</string>
     <string name="product_has_been_posted">Product has been posted!</string>
     <string name="ok">OK</string>
+    <string name="please_turn_on_your_internet_for_posting_products">Please turn on your internet for posting products!</string>
+    <string name="add_productss">Add Products</string>
 </resources>
