Successfull handled  network connectivity check in the Product Fragment , while considering user actions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="ok">OK</string>
     <string name="please_turn_on_your_internet_for_posting_products">Please turn on your internet for posting products!</string>
     <string name="add_productss">Add Products</string>
+    <string name="please_turn_on_your_internet_for_fetching_products">Please turn on your internet for fetching products!</string>
 </resources>
